--- a/Develop/Editor/TeddyUnityProject/TeddyUnityWork_UI/TeddyUnityWork_UI.Editor.csproj
+++ b/Develop/Editor/TeddyUnityProject/TeddyUnityWork_UI/TeddyUnityWork_UI.Editor.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Assets\NGUI\Scripts\Editor\UIWrapContentEditor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\NGUI\Empty.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Fantasy\Fantasy Font - Normal.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Refractive\Refractive Font - Header.txt" />
     <None Include="Assets\NGUI\Examples\Atlases\Refractive\Refractive Font - Normal.txt" />
