--- a/Develop/Editor/TeddyUnityProject/TeddyUnityWork_UI/TeddyUnityWork_UI.Editor.csproj
+++ b/Develop/Editor/TeddyUnityProject/TeddyUnityWork_UI/TeddyUnityWork_UI.Editor.csproj
@@ -130,6 +130,9 @@
     <Reference Include="UnityEditor.OSXStandalone.Extensions">
       <HintPath>Library\UnityAssemblies\UnityEditor.OSXStandalone.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.Facebook.Extensions">
+      <HintPath>Library\UnityAssemblies\UnityEditor.Facebook.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>Library\UnityAssemblies\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
@@ -144,6 +147,9 @@
     </Reference>
     <Reference Include="UnityEditor.iOS.Extensions.Common">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Facebook.Unity.Settings">
+      <HintPath>Library\FacebookSDK\Facebook.Unity.Settings.dll</HintPath>
     </Reference>
     <Reference Include="TeddyUnityPlugin_HierarchySort">
       <HintPath>Assets\Plugin\TeddyUnityPlugin_HierarchySort.dll</HintPath>
